Added authentication and authorisation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.servlet.context-path=/api/v1
+
+jwt.secretKey= 7657uhbygg777g7v77g7g76g7g76fg76gbyygyggttrxrgy7gt76fv7g
