--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>28.2.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
