--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,23 @@
-HELP.md
+# Compiled class files
+*.class
+
+# Logs
+logs/
+*.log
+
+# Maven
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+!pom.xml
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+# IntelliJ IDEA
+.idea/
 *.iml
 *.ipr
+*.iws
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# OS-specific
+.DS_Store
+Thumbs.db
 
-### VS Code ###
-.vscode/
+# Environment variables
+.env
